examples/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-develop
  namespace: develop #nombre del entorno
  uid: 8a482ebe-286d-49c2-a1c2-6dfed92a45a4
  resourceVersion: '231322376'
  generation: 104
  creationTimestamp: '2024-04-26T13:43:42Z'
  labels:
    k8slens-edit-resource-version: v1
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTPS","nginx.ingress.kubernetes.io/proxy-connect-timeout":"20","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"ingress-develop","namespace":"develop"},"spec":{"ingressClassName":"nginx-dev","rules":[{"http":{"paths":[{"backend":{"service":{"name":"find-account-validators","port":{"number":8080}}},"path":"/api/FindAccountValidator","pathType":"Prefix"},{" [...]
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '20'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  selfLink: /apis/networking.k8s.io/v1/namespaces/develop/ingresses/ingress-develop
status:
  loadBalancer:
    ingress:
      - ip: 10.161.169.37 #ip 
spec:
  ingressClassName: nginx-dev
  tls:
    - secretName: srvdevma1-ssl #certificado ssl autofirmado
  rules: # aqui agregamos cada servicio nuevo
    - http:
        paths:
          - path: blacklist/paymentMethod/denyCreditCard #path del servicio
            pathType: Prefix
            backend:
              service:
                name: ms-prs-denycreditcard #nombre ser servicio 
                port:
                  number: 8080
